# library-managment-system

./: .1024  .dockerignore  .env.example  .gitignore  DOCKER_README.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  run.sh
arduino/: LMS_project.ino  Rancho_Regular.h  secrets.h
backend/: pyproject.toml
client/: .dockerignore  .env.example  .eslintrc-disable.json  .gitignore  .prettierignore  .prettierrc  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: Layout.tsx  Login.tsx
client/src/components/admin/: APIKeyManagement.tsx  AdminDashboard.tsx  BookManagement.tsx  InventoryManagement.tsx  OverdueManagement.tsx  RackManagement.tsx  Reports.tsx  (+3 more)
client/src/context/: AuthContext.tsx
client/src/data/: mockData.ts
client/src/types/: index.ts
client/src/utils/: api.ts  reportExports.ts
frontend/src/components/: Layout.tsx
frontend/src/types/: index.ts
server/: .dockerignore  .env.example  .gitignore  Dockerfile  auth.py  database.py  library.db  logging_config.py  main.py  models.py  pyproject.toml  requirements.txt  seed_data.py
server/routers/: admin.py  api_keys.py  auth.py  overdue.py  reports.py  scanInfo.py  user.py  user_auth.py
src/: App.tsx
src/components/: Layout.tsx  Login.tsx
src/components/admin/: AdminDashboard.tsx  BookManagement.tsx  Reports.tsx
src/components/user/: BookHistory.tsx  UserDashboard.tsx  UserProfile.tsx
src/context/: AuthContext.tsx  ThemeContext.tsx
(+4 files in other folders)
